# pitview

./: .gitignore  README.md  install.py  mock_robot.py  pyproject.toml
.github/workflows/: ci.yml
src/pitview/: cli.py  nt.py  rio.py  server.py
src/pitview/static/: app.js  index.html  style.css
tests/: test_cli.py
